[package]
name = "yggdrasil-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = {workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
sea-orm = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8.19"
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = "0.3.18"
yggdrasil-bus = { path = "../yggdrasil-bus" }
futures-util = "0.3.31"